examples/bad/12-WrongOrder.tms
void main() {
  printBool(x());  
  return;
}

boolean x() {
  return true;
}